<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Infinity Browser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="post_no_sample_text">Post No</string>
    <string name="post_topic_sample_text">Topic</string>
    <string name="post_name_sample_text">User Name</string>
    <string name="post_date_sample_text">Date Time</string>
    <string name="post_text_sample_text">This is a sample of what a post looks like</string>
    <string name="board_progress_text">Loading page…</string>
    <string name="post_view_reply_text"><![CDATA[Reply to thread >>>]]></string>
    <string name="filter_intent_board_link">Infinity Browser</string>
    <string name="action_update">Update Board</string>
    <string name="action_update_list">Update Board List</string>
    <string name="action_search_list">Search for Board</string>

    <string-array name="sql_columns_array">
        <item>Unique ips</item>
        <item>Posts/hour</item>
        <item>Total Posts</item>
        <item>Following</item>
        <item>Nationality</item>
        <item>Date created</item>
    </string-array>
    <string-array name="sql_sort_order_array">
        <item>DESC</item>
        <item>ASC</item>
    </string-array>
    <string-array name="image_popup_choices">
        <item>Copy image URL</item>
        <item>Save File</item>
        <item>Open in browser</item>
    </string-array>


    <string name="title_activity_board_list">Boards</string>
    <string name="Board_List_Progress_Text">Loading list of boards…</string>
    <string name="add_new_boards_text">Boards</string>
    <string name="page_load_error_text">Could not load page…Try reloading page.</string>
    <string name="post_image_file_name_text">exampletext.jpg</string>
    <string name="arrow_description">Arrow Pointing to the boards thing</string>
    <string name="add_boards_text">Add new boards to read</string>
    <string name="board_card_value_sample_text">Board Value</string>
    <string name="board_list_name_sample_text">Board Link</string>
    <string name="board_list_board_sample_text">/Board Name/</string>
    <string name="drawer_item_sample_test">/example/</string>
    <string name="post_thumb_desciption">Example post thumb description</string>
    <string name="pref_title_madokafy">Mystery Hype Button</string>
    <string name="pref_description_madokafy">Add more magic to your experience</string>
    <string name="action_boards">Boards List</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="gallery_expanded_image_description">Placeholder for image expansion</string>
    <string name="action_gallery">Open Gallery View</string>
    <string name="catalog_replies_example">R: 71 / I: 12</string>
    <string name="catalog_topic_example">Making a catalog post on infinity</string>
    <string name="catalog_comment_example">This is just a really longish string used to see what a catalog post is going to look like once I implement it into my app a derrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr.</string>
    <string name="action_catalog">Open board catalog</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="gallery_background_acc_text">Black background for expanded image</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About Activity</string>

</resources>
