<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/catalog_card_height"
    android:gravity="center_horizontal">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/catalog_progress"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/catalog_image"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog_replies_example"
        android:id="@+id/tv_catalog_replies"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog_topic_example"
        android:id="@+id/tv_catalog_topic"
        android:textColor="@color/topic"
        android:gravity="fill_vertical"
        android:textSize="@dimen/catalog_topic_text_size"
        android:padding="@dimen/post_bar_small_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog_comment_example"
        android:id="@+id/tv_catalog_comment"
        android:padding="@dimen/post_bar_small_padding"
        android:textSize="@dimen/catalog_comment_text_size" />

</LinearLayout>