<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_view_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/post_after_padding"
    android:background="@drawable/post_background_stroke"
    android:minHeight="@dimen/post_bar_vertical_margin"
    android:orientation="horizontal"
    android:padding="@dimen/post_bar_small_padding">

    <TextView
        android:id="@+id/tv_postno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/tv_username"
        android:text="@string/post_no_sample_text"
        android:textSize="@dimen/post_header_font_size" />

    <TextView
        android:id="@+id/tv_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/tv_datetime"
        android:layout_toRightOf="@+id/tv_postno"
        android:paddingLeft="@dimen/post_bar_small_padding"
        android:text="@string/post_topic_sample_text"
        android:textColor="#0F0C5D"
        android:textSize="@dimen/post_header_font_size" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/post_name_sample_text"
        android:textColor="#ff117743"
        android:textSize="@dimen/post_header_font_size" />

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_username"
        android:paddingEnd="@dimen/post_header_word_spacing"
        android:paddingLeft="@dimen/post_bar_small_padding"
        android:paddingStart="@dimen/post_header_word_spacing"
        android:text="@string/post_date_sample_text"
        android:textSize="@dimen/post_header_font_size" />

    <ViewSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vs_post_body"
        android:layout_below="@+id/tv_postno">

        <LinearLayout
            android:id="@+id/ll_post_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/post_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:baselineAlignBottom="false"
                android:clickable="true"
                android:contentDescription="@string/post_thumb_desciption"
                android:cropToPadding="false"
                android:longClickable="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tv_postText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="@dimen/post_bar_small_padding"
                android:paddingRight="@dimen/post_bar_small_padding"
                android:text="@string/post_text_sample_text"
                android:textSize="@dimen/post_body_font_size" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageButton
                android:id="@+id/post_full_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:baselineAlignBottom="false"
                android:clickable="true"
                android:contentDescription="@string/post_thumb_desciption"
                android:cropToPadding="false"
                android:longClickable="false"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tv_full_post_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="@dimen/post_bar_small_padding"
                android:paddingRight="@dimen/post_bar_small_padding"
                android:text="@string/post_text_sample_text"
                android:textSize="@dimen/post_body_font_size" />
        </LinearLayout>
    </ViewSwitcher>

    <TextView
        android:id="@+id/tv_number_replies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/vs_post_body"
        android:clickable="true"
        android:text="@string/post_view_reply_text"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/omitted_replies_text_size" />

</RelativeLayout>