<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/board_list_car_height"
    android:padding="@dimen/post_bar_small_padding">

    <ToggleButton
        android:layout_width="@dimen/list_card_button_size"
        android:layout_height="@dimen/list_card_button_size"
        android:id="@+id/tb_board_fav"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:src="@drawable/list_card_button_image"
        android:scaleType="fitCenter"
        style="@style/toggleButton"
        android:background="@drawable/chan_button_toggle"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@+id/tb_board_fav"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/post_bar_medium_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/board_list_name_sample_text"
            android:id="@+id/tv_board_link" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/board_list_board_sample_text"
            android:id="@+id/tv_board_name"
            android:textSize="@dimen/list_card_board_name_size" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/board_card_value_sample_text"
        android:id="@+id/tv_board_value"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="right" />
</RelativeLayout>
